# EasyStack_Work

1.0_单元测试/: 0.0_note.md
1.0_单元测试/1.0_unittest库使用示例/: 1.0_unittest库使用示例.py
1.0_单元测试/2.0_Mock/: 0._Mock.md  1.0_测试用例.py  2.0_测试依赖.py  2.1_测试依赖_error.py  2.2_测试依赖_mack.py  function.py  function_change.py  module.py
1.0_单元测试/3.0_tox/: 0.0_node.md
2.0_Django教程/1.0_了解相关/: ReadMe.md
2.0_Django教程/1.0_了解相关/1.0_first_test/HelloWorld/: db.sqlite3
2.0_Django教程/1.0_了解相关/1.0_first_test/HelloWorld/HelloWorld/: settings.py  urls.py  view.py
2.0_Django教程/1.0_了解相关/1.0_first_test/HelloWorld/templates/: hello.html
2.0_Django教程/1.0_了解相关/2.0_Django_模型/HelloWord_2/HelloWord_2/: testdb.py  urls.py  view.py
2.0_Django教程/1.0_了解相关/3.0_Django表单/HelloWord_3/: manage.py
2.0_Django教程/1.0_了解相关/3.0_Django表单/HelloWord_3/HelloWord_3/: search.py  settings.py  urls.py  wsgi.py
keystone_Internship/diveintoslic/: AUTHORS  ChangeLog  README.md  reqirements.txt  setup.cfg  setup.py  start.py
keystone_Internship/diveintoslic/diveintoslic/: exception.py  i18n.py
keystone_Internship/diveintoslic/diveintoslic/for_test/: 0_note.md  1.Orm_to_createTable.py  connect_to_mysql.py  demo.py  use_sqlalchemy.py
keystone_Internship/diveintoslic/diveintoslic/job1/: __init__.py  controllers.py  mysql_function.py  mysql_sqlalchemy.py  routers.py  service.py  wsgi.py
keystone_Internship/diveintoslic/diveintoslic/my_SQLAlchemy/: api.py  application.py  model.py
keystone_Internship/diveintoslic/docs/job1/: detail.md
keystone_Internship/diveintoslic/etc/: paste.ini
(+2 files in other folders)
