[metadata]
name = diveintoslic
summary = This project is going to help new coming student learn openstack.
description-file =
    README.md
author = imuxin
author-email = chengqinglin@icloud.com
home-page = https://github.com/imuxin/diveintoslic
classifier =
    Environment :: SLIC
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
data_files =
    etc/diveintoslic =
        etc/paste.ini
packages =
    diveintoslic

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[entry_points]
paste.filter_factory =
    healthcheck = oslo_middleware:Healthcheck.factory


paste.app_factory =
    job1 = diveintoslic.job1.service:job1_service

